--- a/portfolio.html
+++ b/portfolio.html
@@ -65,28 +65,28 @@
       <!--  -->
       <section>
         <ul class="button-list">
-          <li class="button-list__element">
-            <button type="button" class="button__first button__element--style">
+          <li>
+            <button type="button" class="button-list--theme">
               Wszystkie
             </button>
           </li>
-          <li class="button-list__element">
-            <button type="button" class="button__second button__element--style">
+          <li>
+            <button type="button" class="button-list--theme">
               Strony
             </button>
           </li>
-          <li class="button-list__element">
-            <button type="button" class="button__third button__element--style">
+          <li>
+            <button type="button" class="button-list--theme">
               Aplikacje
             </button>
           </li>
-          <li class="button-list__element">
-            <button type="button" class="button__fourth button__element--style">
+          <li>
+            <button type="button" class="button-list--theme">
               Dizajn
             </button>
           </li>
-          <li class="button-list__element">
-            <button type="button" class="button__fifth button__element--style">
+          
+            <button type="button" class="button-list--theme">
               Marketing
             </button>
           </li>
@@ -100,7 +100,7 @@
           <div class="products__container">
             <ul class="products__list">
               <li class="products__picture">
-                <div class="picture__box img-one">
+                <div class="products__box img-one">
                   <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -114,7 +114,7 @@
               </li>
 
               <li class="products__picture">
-                <div class="picture__box img-two">
+                <div class="products__box img-two">
                   <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -127,7 +127,7 @@
                 <p class="products__summary">Dizajn</p>
               </li>
               <li class="products__picture">
-                <div class="picture__box img-three">
+                <div class="products__box img-three">
                   <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -140,7 +140,7 @@
                 <p class="products__summary">Aplikacja</p>
               </li>
               <li class="products__picture">
-                <div class="picture__box img-four">
+                <div class="products__box img-four">
                   <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -153,7 +153,7 @@
                 <p class="products__summary">Marketing</p>
               </li>
               <li class="products__picture">
-                <div class="picture__box img-five">
+                <div class="products__box img-five">
                   <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -166,7 +166,7 @@
                 <p class="products__summary">Aplikacja</p>
               </li>
               <li class="products__picture">
-                <div class="picture__box img-six">
+                <div class="products__box img-six">
                   <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -179,7 +179,7 @@
                 <p class="products__summary">Strona internetowa</p>
               </li>
               <li class="products__picture">
-                <div class="picture__box img-seven">
+                <div class="products__box img-seven">
                   <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -192,7 +192,7 @@
                 <p class="products__summary">Dizajn</p>
               </li>
               <li class="products__picture">
-                <div class="picture__box img-eight">
+                <div class="products__box img-eight">
                   <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -205,7 +205,7 @@
                 <p class="products__summary">Marketing</p>
               </li>
               <li class="products__picture">
-                <div class="picture__box img-nine">
+                <div class="products__box img-nine">
                   <div class="products__slider">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
