--- a/index.html
+++ b/index.html
@@ -489,14 +489,9 @@
             </div>
             <address>
               <ul class="address">
+                <li class="address__item">m. Warszawa, Aleje Jerozolimskie 21</li>
                 <li class="address__item">
-                  m. Warszawa, Aleje Jerozolimskie 21
-                </li>
-                <li class="address__item">
-                  <a
-                    href="mailto:nfo@devstudio.com"
-                    class="address__item--color"
-                  >
+                  <a href="mailto:nfo@devstudio.com" class="address__item--color">
                     info@devstudio.com
                   </a>
                 </li>
